--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,14 @@
         android:theme="@style/Theme.AVMStoreLesson"
         tools:targetApi="31">
         <activity
+            android:name=".ui.storeAdd.StoreAddActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.storeDetail.StoreDetailActivity"
             android:exported="false" />
         <activity
             android:name=".ui.main.MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true">
